[project]
name = "zar-bitcoin-hub"
version = "0.1.0"
description = "CLI tool to convert Bitcoin amounts to South African Rand and simulate payouts."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "keithanwilson386-arch" } ]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0",
    "python-dotenv>=0.21.0",
    "coincurve>=17.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
btc_to_zar = "btc_to_zar:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
